# swade_compendium_chn

./: .gitignore  README.md  babele.js  changelog.md  create_complete_po.py  fix_refs.py  merge_extracted_po.py  pyproject.toml
.github/workflows/: release.yml  test.yml
.kiro/steering/: product.md  structure.md  tech.md
automation/: README.md  __init__.py
automation/ai_translator/: __init__.py  chunker.py  client.py  link_processor.py  memory_builder.py  prompts.py  tiddlywiki_parser.py  translate_compendium.py  translator.py
automation/babele_converter/: __init__.py  __main__.py  converter.py
automation/change_detector/: __init__.py  __main__.py  detector.py  models.py
automation/cli/: __init__.py  quality_check.py  validate.py
automation/format_converter/: __init__.py  __main__.py  converter.py
automation/glossary_manager/: __init__.py  __main__.py  manager.py
automation/incremental_update/: __init__.py  __main__.py  updater.py
automation/json_validator/: __init__.py  __main__.py  validator.py
automation/multi_module/: __init__.py  manager.py  (+1 more)
data/: enhanced_glossary.json  few_shot_examples.json  new_tw_terms.json  translation_memory.json
docs/: README.md  automation-tools-guide.md  deepseek-translation-guide.md  local-dev-guide.md  translation-generator-guide.md  translation-workflow.md  weblate-guide.md
en-US/: swade-core-rules.swade-armor.json
glossary/: swade-glossary.json  swpf-glossary.json
mappings/: abilities.json  actor.json  edges.json  journal.json  powers.json  races.json  skills.json  tables.json  vehicles.json
utility/: README.md  csv2json.py  db_converter.py  extract_text.py  html_injector.py  translate_names.py
zh_Hans/: swade-core-rules.swade-armor.json  swade-core-rules.swade-bestiary.json  swade-core-rules.swade-edges.json  swade-core-rules.swade-equipment.json  swade-core-rules.swade-hindrances.json  swade-core-rules.swade-modern-firearms.json  swade-core-rules.swade-personal-weapons.json  swade-core-rules.swade-powers.json  swade-core-rules.swade-races.json  swade-core-rules.swade-racial-abilities.json  swade-core-rules.swade-rules.json  swade-core-rules.swade-skills.json  swade-core-rules.swade-special-weapons.json  swade-core-rules.swade-specialabilities.json  swade-core-rules.swade-tables.json  swade-core-rules.swade-vehicles.json  swpf-bestiary.swpf-bestiary-journal.json  swpf-core-rules.swpf-abilities.json  swpf-core-rules.swpf-macros.json  swpf-core-rules.swpf-rules.json  swpf-core-rules.swpf-tables.json
(+22 files in other folders)
